src/objects/InContact__c.object
<CustomObject>
    <description>Imported InContact Contacts linked to relative Salesforce Leads</description>
    <fields>
        <fullName>ACWSeconds__c</fullName>
        <label>ACW Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AbandonSeconds__c</fullName>
        <label>Abandon Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abandoned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abandoned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgentName_InfoCision__c</fullName>
        <label>Agent Name InfoCision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentNo__c</fullName>
        <label>Agent Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentSeconds__c</fullName>
        <label>Agent Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audio_File_Path__c</fullName>
        <description>File path to Audio File for call log</description>
        <formula>IF( ISNULL(StartDate__c), &apos;&apos;, 

IF( ISPICKVAL(Call_System__c,&apos;InfoCision&apos;),

&apos;\\\\cms-fs04\\call_center_recordings\\InfoCision\\Audio\\&apos; &amp; MID(TEXT(StartDate__c),0,4) &amp; LPAD(MID(TEXT(StartDate__c),6,2),2,&apos;0&apos;) &amp; LPAD(MID(TEXT(StartDate__c),9,2),2,&apos;0&apos;) &amp; &apos;\\&apos; &amp; LEFT(Name, 8) &amp; &apos;\\&apos; &amp; LEFT(Name, 8) &amp; &apos;_&apos; &amp; IF(LEN(MID(Name, (FIND(&apos;_&apos;, Name)+1), (LEN(Name)-FIND(&apos;_&apos;,Name))))=6,&apos;00&apos;,&apos;&apos;) &amp; MID(Name, (FIND(&apos;_&apos;, Name)+1), (LEN(Name)-FIND(&apos;_&apos;,Name))) &amp; &apos;.wav&apos;

, 

&apos;\\\\cms-fs04\\call_center_recordings\\inContact\\&apos; &amp; MID(TEXT(StartDate__c),0,4) &amp; &apos;\\&apos; &amp;  LPAD(MID(TEXT(StartDate__c),6,2),2,&apos;0&apos;) &amp; &apos;-&apos; &amp; MID(TEXT(StartDate__c),0,4) &amp; &apos;\\&apos; &amp; LEFT(Name, 5) &amp; &apos;0000\\&apos; &amp; Name &amp; &apos;.wav&apos;

))</formula>
        <inlineHelpText>Right Click and Copy Link Address, paste link inside Windows Explorer or Audio Program
Please Note that the file may not exist on server.</inlineHelpText>
        <label>Audio File Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_System__c</fullName>
        <label>Call System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InContact</fullName>
                    <default>true</default>
                    <label>InContact</label>
                </value>
                <value>
                    <fullName>InfoCision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignNo__c</fullName>
        <label>Campaign Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConfSeconds__c</fullName>
        <label>Conference Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactCode__c</fullName>
        <label>Contact Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>InContact Contacts</relationshipLabel>
        <relationshipName>InContact_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateACWWarehoused__c</fullName>
        <label>Date ACW Warehoused</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateContactWarehoused__c</fullName>
        <label>Date Contact Warehoused</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disposition_Code__c</fullName>
        <label>Disposition Code</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition_Comments__c</fullName>
        <label>Disposition Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>ANI Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HoldSeconds__c</fullName>
        <label>Hold Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_cnt__c</fullName>
        <label>Hold Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InQueueSeconds__c</fullName>
        <label>InQueue Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsShortAbandon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Short Abandon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWarehoused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Warehoused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastChecked__c</fullName>
        <label>Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>InContact Contacts</relationshipLabel>
        <relationshipName>InContact_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterContactID__c</fullName>
        <label>Master Contact ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>EMail</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>PhoneCall</fullName>
                </value>
                <value>
                    <fullName>VoiceMail</fullName>
                </value>
                <value>
                    <fullName>WorkItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutboundSkill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outbound Skill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostQueueSeconds__c</fullName>
        <label>PostQueue Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreQueueSeconds__c</fullName>
        <label>PreQueue Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReleaseSeconds__c</fullName>
        <label>Release Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportGrouping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Grouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ignored</fullName>
                </value>
                <value>
                    <fullName>InServiceLevel</fullName>
                </value>
                <value>
                    <fullName>OutServiceLevel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkillName__c</fullName>
        <label>Skill Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkillNo__c</fullName>
        <label>Skill Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Routing</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Prequeue</fullName>
                </value>
                <value>
                    <fullName>Inqueue</fullName>
                </value>
                <value>
                    <fullName>PostQueue</fullName>
                </value>
                <value>
                    <fullName>Interrupted</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>CallBack</fullName>
                </value>
                <value>
                    <fullName>Spawned</fullName>
                </value>
                <value>
                    <fullName>PlaceCall</fullName>
                </value>
                <value>
                    <fullName>EndContact</fullName>
                </value>
                <value>
                    <fullName>EmailDiscard</fullName>
                </value>
                <value>
                    <fullName>EmailReply</fullName>
                </value>
                <value>
                    <fullName>EmailForward</fullName>
                </value>
                <value>
                    <fullName>EmailTransfer</fullName>
                </value>
                <value>
                    <fullName>CallbackPending</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamName__c</fullName>
        <label>Team Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamNo__c</fullName>
        <label>Team Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>DNIS Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TotalDurationSeconds__c</fullName>
        <label>Total Duration Seconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_EXT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_INT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Internal</label>
        <type>Checkbox</type>
    </fields>
    <label>InContact Contact</label>
    <nameField>
        <label>Contact ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InContact Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>